update the pdf links

--- a/HTML/firstYear/2nd_semester.html
+++ b/HTML/firstYear/2nd_semester.html
@@ -47,9 +47,9 @@
                     <h3>Python Programming</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
                 </div>
             </div>
@@ -59,9 +59,9 @@
                     <h3>Electronics Engineering</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -72,9 +72,9 @@
                     <h3>English Language Skills For Communication II</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -85,9 +85,9 @@
                     <h3>Engineering Mathematics II</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -99,8 +99,8 @@
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -111,9 +111,9 @@
                     <h3>Engineering Physics</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -124,9 +124,9 @@
                     <h3>Python Programming Lab </h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -137,9 +137,9 @@
                     <h3>Electronics Lab I</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -150,9 +150,9 @@
                     <h3>English Language Lab II</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -163,9 +163,9 @@
                     <h3>Engineering Workshop Practice Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -176,9 +176,9 @@
                     <h3>Engineering Physics Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
