update the link of pdf

--- a/HTML/firstYear/1st_semester.html
+++ b/HTML/firstYear/1st_semester.html
@@ -58,9 +58,9 @@
                     <h3>Computer Programming</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -71,9 +71,9 @@
                     <h3>Basic Electrical Engineering</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -84,9 +84,9 @@
                     <h3>English Language Skills For Communication I</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info"onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info"onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info"onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -97,9 +97,9 @@
                     <h3>Engineering Mathematics I </h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -110,9 +110,9 @@
                     <h3>Engineering Chemistry Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -123,9 +123,9 @@
                     <h3>Computer Programming Lab </h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -136,9 +136,9 @@
                     <h3>Electrical Engineering Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -149,9 +149,9 @@
                     <h3>English Language Lab I</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -162,9 +162,9 @@
                     <h3>Engineering Drawing Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
