update the link of all notes

--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -48,7 +48,7 @@
                     <p>Click below to view the pdf of each module .</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/OOPs mid term1-1.pdf')">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod2</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod3</button>
                     </div>
                 </div>
@@ -59,9 +59,9 @@
                     <h3>Database Management System</h3>
                     <p>Click below to view the pdf of each module .</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -72,7 +72,7 @@
                     <h3>Operating System</h3>
                     <p>Click below to view the pdf of each module .</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/os/os 2nd module.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/os/os 2nd module.pdf')">Mod2</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/os/os third.pdf')" >Mod3</button>
                     </div>
@@ -86,8 +86,8 @@
                     <p>Click below to view the pdf of each module .</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -98,9 +98,9 @@
                     <h3>English For  Professional Purposes - I </h3>
                     <p>Click below to view the pdf of each module .</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -111,9 +111,9 @@
                     <h3>Ethics And Values</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -124,9 +124,9 @@
                     <h3>Engineering Mathematics III </h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -137,9 +137,9 @@
                     <h3>Object Oriented Programming Lab</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info" >Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -150,9 +150,9 @@
                     <h3>Database Management System Lab</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -163,9 +163,9 @@
                     <h3>Operating System Lab</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -176,9 +176,9 @@
                     <h3>Computer Organization Lab</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -190,7 +190,7 @@
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/soft skills module 1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/module 2 soft skills.pdf')">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/module 2 soft skills.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -201,9 +201,9 @@
                     <h3>Basic Course In Entrepreneurship</h3>
                     <p>Click below to view the pdf of each module </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/module 2 soft skills.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/module 2 soft skills.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/soft skills sem 3/module 2 soft skills.pdf')">Mod3</button>
                     </div>
 
                 </div>
